--- a/assignment_1.Rmd
+++ b/assignment_1.Rmd
@@ -41,12 +41,11 @@ cases_agg_total <- aggregate(n_cases ~ agegroup + sex, data = cases, FUN = sum)
 p1 <- ggplot(cases_agg_total, aes(x = agegroup, y = n_cases, fill = sex)) +
   geom_bar(stat = "identity", position = "dodge") +
   labs(
-    title = "Side-by-side (Dodged)",
+    title = "Number of Colon Cancer Cases by Age Group and Sex",
     x = "Age Group (Years)",
     y = "Number of Cases",
     fill = "Sex"
   ) +
-  scale_fill_manual(values = c("Female" = "#E69F00", "Male" = "#56B4E9")) + 
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
@@ -90,7 +89,6 @@ p2 <- ggplot(cases_yearly, aes(x = year, y = n_cases, color = sex)) +
     y = "Total Number of Cases",
     color = "Sex"
   ) +
-  scale_color_manual(values = c("Female" = "#E69F00", "Male" = "#56B4E9")) +
   scale_x_continuous(
     breaks = year_breaks,
     labels = as.character(year_breaks)
@@ -124,13 +122,12 @@ population$agegroup <- factor(population$agegroup, levels = unique(population$ag
 
 Graphs that illustrate the population size over age groups and calendar year simultaneously, separately by males and females.
 
-```{r}
-year_breaks_pop <- seq(min(population$year), max(population$year), by = 5)
-```
 
 
 ```{r, fig.width = 10, fig.height = 8 echo=FALSE}
 # Line plot faceted by sex
+year_breaks_pop <- seq(min(population$year), max(population$year), by = 5)
+
 p3 <- ggplot(population, aes(x = year, y = n_pop, color = agegroup, group = agegroup)) +
   geom_line(linewidth = 0.8) +
   facet_wrap(~sex, scales = "free_y", ncol = 1) + # Separate panels for Male and Female
@@ -154,6 +151,27 @@ p3 <- ggplot(population, aes(x = year, y = n_pop, color = agegroup, group = ageg
 
 print(p3)
 ```
+
+```{r}
+p31 <- ggplot(population, aes(x = year, y = agegroup, fill = n_pop)) +
+  geom_tile(color = "white") +                   
+  scale_fill_gradient(low = "yellow", high = "red") +
+  facet_wrap(~sex) +                             
+  labs(
+    x = "Year",
+    y = "Age group",
+    fill = "Population size",
+    title = "Population size over age groups and years by sex"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1), 
+    strip.text = element_text(face = "bold")          
+  )
+
+print(p31)
+```
+
 
 ---
 
@@ -227,16 +245,12 @@ This method ignores the exact person–time at risk and treats the yearly popula
 
 ```{r}
 # --- Version 1. Age-Specific Incidence Rate (ASIR) ---
-merged_data$incidence_rate_asir <- merged_data$n_cases / merged_data$n_pop
+merged_data$asir <- merged_data$n_cases / merged_data$n_pop
 
 # --- Version 2. Crude Incidence Rate (CIR) ---
-totals_yearly$incidence_rate_cir <- totals_yearly$total_cases / totals_yearly$total_population
+totals_yearly$cir <- totals_yearly$total_cases / totals_yearly$total_population
 
-# Inspecting the new data frames (optional)
-cat("--- Sample of Data with Age-Specific Incidence Rate ---\n")
-print(head(merged_data[, c("agegroup", "year", "sex", "n_cases", "n_pop", "incidence_rate_asir")]))
-cat("\n--- Data with Crude Incidence Rate ---\n")
-print(totals_yearly)
+tail(merged_data)
 ```
 
 ---
@@ -252,17 +266,15 @@ year_breaks_cir <- seq(min(totals_yearly$year), max(totals_yearly$year), by = 5)
 totals_yearly$cir_per_100k <- totals_yearly$incidence_rate_cir * 100000
 
 p6 <- ggplot(totals_yearly, aes(x = year, y = cir_per_100k, color = sex)) +
-  geom_line(linewidth = 1) +
   geom_point() +
   # Apply a smoother (e.g., LOESS or linear model 'lm')
-  geom_smooth(method = "loess", se = FALSE, linetype = "dashed", linewidth = 0.8) +
+  geom_smooth(method = "loess", se = FALSE, linewidth = 0.8) +
   labs(
     title = "Crude Incidence Rate (CIR) of Colon Cancer Over Time (per 100,000)",
     x = "Calendar Year",
     y = "Crude Incidence Rate (per 100,000 persons)",
     color = "Sex"
   ) +
-  scale_color_manual(values = c("Female" = "#E69F00", "Male" = "#56B4E9")) +
   scale_x_continuous(breaks = year_breaks_cir) +
   theme_minimal()
 
@@ -273,4 +285,268 @@ The smoothed trend lines indicate that the increase is not linear:
 
 There is a steeper rise during the 1970s and early 1980s. A plateau or slower growth appears around the late 1980s to mid-1990s. After the 2000s, the incidence begins to increase again for both sexes.
 
----
+## Task 7
+```{r}
+year_sex_totals <- merged_data %>%
+  mutate(sex = factor(sex)) %>%
+  group_by(year, sex) %>%
+  summarise(
+    total_cases = sum(n_cases),
+    total_pop   = sum(n_pop),
+    .groups = "drop"
+  )
+
+pois_model <- glm(
+  total_cases ~ year + sex,
+  offset = log(total_pop),
+  family = poisson,
+  data = year_sex_totals
+)
+summary(pois_model)
+```
+
+# 8.
+
+```{r}
+# Create a specific dataframe for the years 1970 and 2020
+predicted_data <- data.frame(
+  year = c(1970, 1970, 2020, 2020),
+  sex = as.factor(c("Male", "Female", "Male", "Female")),
+  total_pop = 100000
+)
+
+# Predict the rates
+predicted_data$cir <- predict(pois_model, newdata = predicted_data, type = "response")
+
+# Display the results
+print(predicted_data)
+
+cat("The 1970 male–female IR difference is",abs(predicted_data$cir[1]-predicted_data$cir[2]),"\n")
+cat("The 2020 male–female IR difference is",abs(predicted_data$cir[3]-predicted_data$cir[4]))
+```
+# 9.
+
+```{r}
+# Prepare the data
+df_plot <- df_merged %>%
+  mutate(
+    incidence_rate = (n / n_pop) * 100000)
+
+# Create the Graph
+ggplot(df_plot, aes(x = year, y = incidence_rate, color = agegroup, group = agegroup)) +
+  geom_point(alpha = 0.3, size = 1) + 
+  geom_smooth(method = "loess", se = FALSE, linewidth = 1) + 
+  facet_wrap(~ sex) + 
+  
+  scale_y_log10() + 
+  labs(
+    title = "Colon Cancer Incidence Rates over Calendar Year",
+    subtitle = "Stratified by Age Group and Sex (with Loess Smoothing)",
+    x = "Calendar Year",
+    y = "Incidence Rate (per 100,000) - Log Scale",
+    color = "Age Group"
+  ) +
+  theme_minimal()
+```
+
+# 10.
+```{r}
+model_interaction <- glm(n ~ ns(year, df = 4)*sex + ns(year, df = 4)*agegroup,
+                         offset = log(n_pop),
+                         family = poisson(link = "log"),
+                         data = df_merged)
+
+target_data <- data.frame(
+  year = c(1970, 1970, 2020, 2020),
+  sex = as.factor(c("Male", "Female", "Male", "Female")),
+  agegroup = "70-74", 
+  n_pop = 100000
+)
+
+target_data$predicted_rate <- predict(model_interaction, 
+                                    newdata = target_data,
+                                    type = "response")
+target_data
+```
+
+# 11.
+
+
+```{r}
+df_q11 <- df_merged %>%
+  mutate(
+    lower_bound = as.numeric(str_extract(agegroup, "^[0-9]+")),
+    age_mid = lower_bound + 2
+  )
+model_spline_age <- glm(n ~ ns(year, df = 4) * ns(age_mid, df = 4) * sex + offset(log(n_pop)),
+                        family = poisson(link = "log"),
+                        data = df_q11)
+
+# --- A. Predict data (Lines) ---
+# at 52, 72, 87 year-old
+pred_data <- expand.grid(
+  year = 1970:2020,
+  sex = df_q11$sex,
+  age_mid = c(52, 72, 87),
+  n_pop = 100000
+)
+
+pred_data$fitted_rate <- predict(model_spline_age, newdata = pred_data, type = "response")
+
+# --- B. observation data (Points) ---
+obs_data <- df_q11 %>%
+  filter(agegroup %in% c("50-54", "70-74", "85-89")) %>%
+  mutate(
+    obs_rate = (n / n_pop) * 100000,
+    target_age = case_when(
+      agegroup == "50-54" ~ 52,
+      agegroup == "70-74" ~ 72,
+      agegroup == "85-89" ~ 87 
+    )
+  )
+
+ggplot() +
+  geom_point(data = obs_data, 
+             aes(x = year, y = obs_rate, color = sex), 
+             alpha = 0.4, shape = 1) +
+  
+  geom_line(data = pred_data, 
+            aes(x = year, y = fitted_rate, color = sex), 
+            linewidth = 1) +
+  facet_wrap(~ age_mid, scales = "free_y", labeller = label_both, ncol=1) +
+  labs(
+    title = "Colon Cancer Incidence: Model vs Observed",
+    subtitle = "Lines = Spline Model Predictions (Ages 52, 72, 87)\nPoints = Observed Crude Rates (Groups 50-54, 70-74, 85-89)",
+    y = "Incidence Rate (per 100,000)",
+    x = "Year",
+    color = "Sex"
+  ) +
+  theme_minimal()
+```
+
+# 12.
+```{r}
+
+# --- Step 1: Define the Standard Population (2022) ---
+std_pop_2022 <- df_q11 %>%
+  filter(year == 2022) %>%
+  select(sex, age_mid, std_pop = n_pop)
+
+# --- Step 2: Calculate Observed Age-Specific Rates---
+df_observed_rates <- df_q11 %>%
+  mutate(obs_rate_per_person = n / n_pop)
+
+# --- Step 3: Calculate Age-Standardized Rates (ASR) ---
+# Formula: Sum(Observed_Rate_age_i * Pop_std_age_i) / Total_std_pop
+df_standardized <- df_observed_rates %>%
+  left_join(std_pop_2022, by = c("sex", "age_mid")) %>%
+  group_by(year, sex) %>%
+  summarise(
+    expected_cases = sum(obs_rate_per_person * std_pop),
+    total_std_pop = sum(std_pop),
+    .groups = "drop"
+  ) %>%
+  mutate(
+    rate = (expected_cases / total_std_pop) * 100000,
+    type = "Age-Standardized (Observed)" 
+  ) %>%
+  select(year, sex, rate, type)
+
+# --- Step 4: Calculate Crude Rates (for Comparison) ---
+df_crude <- df_q11 %>%
+  group_by(year, sex) %>%
+  summarise(
+    total_cases = sum(n),
+    total_pop = sum(n_pop),
+    .groups = "drop"
+  ) %>%
+  mutate(
+    rate = (total_cases / total_pop) * 100000,
+    type = "Crude (Non-standardized)"
+  ) %>%
+  select(year, sex, rate, type)
+
+# --- Step 5: Combine and Plot ---
+df_final_plot <- bind_rows(df_standardized, df_crude)
+
+# Create the comparison graph
+ggplot(df_final_plot, aes(x = year, y = rate, color = sex, linetype = type)) +
+  geom_line(linewidth = 1.2) +
+  labs(
+    title = "Crude vs. Direct Age-Standardized Incidence Rates",
+    subtitle = "Based on OBSERVED Data (Standardized to 2022 Population)",
+    y = "Incidence Rate (per 100,000 person-years)",
+    x = "Calendar Year",
+    color = "Sex",
+    linetype = "Rate Type"
+  ) +
+  theme_minimal() +
+  theme(legend.position = "bottom")
+```
+
+# 13.
+```{r}
+# ==============================================================================
+# Step 1: Define the Standard Population Weights (Year 2022)
+std_pop_weights <- df_q11 %>%
+  filter(year == 2022) %>%
+  select(sex, age_mid, std_weight = n_pop)
+
+# ==============================================================================
+# Step 2: Method A - Direct Standardization of OBSERVED Rates (from Q12)
+df_asr_observed <- df_q11 %>%
+  mutate(raw_rate = n / n_pop) %>%
+  left_join(std_pop_weights, by = c("sex", "age_mid")) %>%
+  group_by(year, sex) %>%
+  summarise(
+    weighted_sum = sum(raw_rate * std_weight),
+    total_weight = sum(std_weight),
+    .groups = "drop"
+  ) %>%
+  mutate(
+    rate = (weighted_sum / total_weight) * 100000,
+    method = "Observed (Direct)" # Label for the plot
+  )
+
+# Step 3: Method B - Standardization of MODEL PREDICTED Rates (The Q13 Task)
+
+pred_grid <- expand.grid(
+  year = 1970:2022,
+  age_mid = unique(df_q11$age_mid),
+  sex = unique(df_q11$sex),
+  n_pop = 100000 # Arbitrary population base to calculate the rate
+)
+pred_grid$pred_count <- predict(model_spline_age, newdata = pred_grid, type = "response")
+pred_grid$pred_rate_per_person <- pred_grid$pred_count / 100000
+df_asr_model <- pred_grid %>%
+  left_join(std_pop_weights, by = c("sex", "age_mid")) %>%
+  group_by(year, sex) %>%
+  summarise(
+    weighted_sum = sum(pred_rate_per_person * std_weight),
+    total_weight = sum(std_weight),
+    .groups = "drop"
+  ) %>%
+  mutate(
+    rate = (weighted_sum / total_weight) * 100000,
+    method = "Model-Based (Predicted)" 
+  )
+
+# Step 4: Combine and Plot the Comparison
+df_comparison <- bind_rows(df_asr_observed, df_asr_model)
+ggplot(df_comparison, aes(x = year, y = rate, color = sex, linetype = method)) +
+  geom_line(aes(linewidth = method)) + 
+  scale_linewidth_manual(values = c("Observed (Direct)" = 0.8, "Model-Based (Predicted)" = 1.2)) +
+  
+  labs(
+    title = "Comparison of Age-Standardized Rates",
+    subtitle = "Direct Standardization (Observed) vs. Model-Based Standardization (Predicted)\nStandardized to Sweden 2022 Population",
+    y = "Incidence Rate (per 100,000 person-years)",
+    x = "Calendar Year",
+    color = "Sex",
+    linetype = "Method",
+    linewidth = "Method"
+  ) +
+  theme_minimal() +
+  theme(legend.position = "bottom")
+```
+
