--- a/assignment_1.Rmd
+++ b/assignment_1.Rmd
@@ -23,7 +23,6 @@ library(splines)
 cases <- read.delim("cases-1.tsv", sep = "\t", header = TRUE)
 
 # Renaming because it is called n here and n_pop in the other file
-names(cases)[names(cases) == "n"] <- "n_cases"
 
 cases$year <- as.numeric(as.character(cases$year))
 
@@ -37,10 +36,10 @@ Showing the number of cases by age group and sex. Conclusion from the graph.
 
 ```{r echo=FALSE}
 # Sum of cases per age group and sex across all years
-cases_agg_total <- aggregate(n_cases ~ agegroup + sex, data = cases, FUN = sum)
+cases_agg_total <- aggregate(n ~ agegroup + sex, data = cases, FUN = sum)
 
 # Dodged bars
-p1 <- ggplot(cases_agg_total, aes(x = agegroup, y = n_cases, fill = sex)) +
+p1 <- ggplot(cases_agg_total, aes(x = agegroup, y = n, fill = sex)) +
   geom_bar(stat = "identity", position = "dodge") +
   labs(
     title = "Number of Colon Cancer Cases by Age Group and Sex",
@@ -74,7 +73,7 @@ Showing the number of cases over calendar years.
 
 ```{r}
 # Sum of cases per year and sex
-cases_yearly <- aggregate(n_cases ~ year + sex, data = cases, FUN = sum)
+cases_yearly <- aggregate(n ~ year + sex, data = cases, FUN = sum)
 ```
 
 
@@ -82,7 +81,7 @@ cases_yearly <- aggregate(n_cases ~ year + sex, data = cases, FUN = sum)
 # Only showing every 5th year for cleaner x-axis labels (overlaps otherwise)
 year_breaks <- seq(min(cases_yearly$year), max(cases_yearly$year), by = 5)
 
-p2 <- ggplot(cases_yearly, aes(x = year, y = n_cases, color = sex)) +
+p2 <- ggplot(cases_yearly, aes(x = year, y = n, color = sex)) +
   geom_line(linewidth = 1) +
   geom_point() +
   labs(
@@ -231,7 +230,7 @@ Merging the information... Does the population file include the same age groups 
 merged_data <- merge(cases, population, by = c("agegroup", "year", "sex"), all = TRUE)
 
 # --- Question 4b: Checking for consistent age groups and years ---
-check_merge <- merged_data[is.na(merged_data$n_cases) | is.na(merged_data$n_pop), ]
+check_merge <- merged_data[is.na(merged_data$n) | is.na(merged_data$n_pop), ]
 
 cat("\n--- Data Alignment Check ---\n")
 if (nrow(check_merge) == 0) {
@@ -245,11 +244,11 @@ cat("---\n\n")
 
 # --- Question 4c: Creating Data Frame with Totals ---
 # Removing rows with NA before accurate summation (if alignment check failed)
-complete_merged_data <- merged_data[!is.na(merged_data$n_cases) & !is.na(merged_data$n_pop), ]
+complete_merged_data <- merged_data[!is.na(merged_data$n) & !is.na(merged_data$n_pop), ]
 
 # Aggregating total cases and total population per year and sex
 totals_yearly <- aggregate(
-  cbind(total_cases = n_cases, total_population = n_pop) ~ year + sex,
+  cbind(total_cases = n, total_population = n_pop) ~ year + sex,
   data = complete_merged_data,
   FUN = sum
 )
@@ -293,7 +292,7 @@ This method ignores the exact person–time at risk and treats the yearly popula
 
 ```{r}
 # --- Version 1. Age-Specific Incidence Rate (ASIR) ---
-merged_data$asir <- merged_data$n_cases / merged_data$n_pop
+merged_data$asir <- merged_data$n / merged_data$n_pop
 
 # --- Version 2. Crude Incidence Rate (CIR) ---
 totals_yearly$cir <- totals_yearly$total_cases / totals_yearly$total_population
@@ -339,7 +338,7 @@ year_sex_totals <- merged_data %>%
   mutate(sex = factor(sex)) %>%
   group_by(year, sex) %>%
   summarise(
-    total_cases = sum(n_cases),
+    total_cases = sum(n),
     total_pop   = sum(n_pop),
     .groups = "drop"
   )
