--- a/assignment_1.Rmd
+++ b/assignment_1.Rmd
@@ -375,7 +375,7 @@ cat("The 2020 male–female IR difference is",abs(predicted_data$cir[3]-predicte
 
 ```{r}
 # Prepare the data
-df_plot <- df_merged %>%
+df_plot <- merged_data %>%
   mutate(
     incidence_rate = (n / n_pop) * 100000)
 
@@ -401,7 +401,7 @@ ggplot(df_plot, aes(x = year, y = incidence_rate, color = agegroup, group = ageg
 model_interaction <- glm(n ~ ns(year, df = 4)*sex + ns(year, df = 4)*agegroup,
                          offset = log(n_pop),
                          family = poisson(link = "log"),
-                         data = df_merged)
+                         data = merged_data)
 
 target_data <- data.frame(
   year = c(1970, 1970, 2020, 2020),
@@ -420,7 +420,7 @@ Here is a plot I made to try to explain why the rate is now higher for men than 
 We see that the rate is higher in older age groups, and from earlier, when plotting the population, we saw that women reach older ages than men on average. that might be a part of the reason why the rate is higher for men in each age group.
 
 ```{r}
-age_levels <- unique(df_merged$agegroup)
+age_levels <- unique(merged_data$agegroup)
 
 target_data <- expand.grid(
   year = seq(1970, 2020, by=1),
@@ -461,7 +461,7 @@ ggplot(target_data, aes(x = agegroup, y = predicted_rate, group = sex, color = s
 
 
 ```{r}
-df_q11 <- df_merged %>%
+df_q11 <- merged_data %>%
   mutate(
     lower_bound = as.numeric(str_extract(agegroup, "^[0-9]+")),
     age_mid = lower_bound + 2
