--- a/obsolete_Assignment 1_new.Rmd
+++ b/obsolete_Assignment 1_new.Rmd
@@ -116,10 +116,16 @@ Regarding the difference between males and females: The model includes sex as a 
 ```{r}
 library(ggplot2)
 library(dplyr)
+age_order <- c(
+  "0-4", "5-9", "10-14", "15-19", "20-24", "25-29", "30-34", "35-39",
+  "40-44", "45-49", "50-54", "55-59", "60-64", "65-69", "70-74",
+  "75-79", "80-84", "85-89"
+)
 
 # Prepare the data
 df_plot <- df_merged %>%
-  mutate(incidence_rate = (n / n_pop) * 100000)
+  mutate(incidence_rate = (n / n_pop) * 100000) %>%
+mutate(agegroup = factor(agegroup, levels = age_order))
 
 # Create the Graph
 ggplot(df_plot, aes(x = year, y = incidence_rate, color = agegroup, group = agegroup)) +
